# rasterpandas

./: README.md  example.ipynb  pyproject.toml  raster_array.py  stac_array.py  stac_pandas.py
rasterpandas/: __init__.py  raster_array.py  stac_array.py
tests/: test_raster.py
